--- a/sem10_web/seminar10.ipynb
+++ b/sem10_web/seminar10.ipynb
@@ -118,7 +118,9 @@
     "To run:\n",
     "\n",
     "> export FLASK_APP=webapp.py<br />\n",
-    "> flask run"
+    "> flask run\n",
+    "\n",
+    "P.S. If you are on Windows you need to use set instead of export."
    ]
   },
   {
@@ -147,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from telegram.ext import Updater, CommandHandler, MessageHandler, Filters\n",
@@ -220,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -241,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
